--- a/1. C#/1.12 Events/1.12 Events/1.12 Events.csproj
+++ b/1. C#/1.12 Events/1.12 Events/1.12 Events.csproj
@@ -34,19 +34,24 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventForBank.cs" />
+    <Compile Include="EventForMe.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="MovingEventArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="WeakRef.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
