--- a/1. C#/1.12 Events/1.12 Events/1.12 Events.csproj
+++ b/1. C#/1.12 Events/1.12 Events/1.12 Events.csproj
@@ -47,11 +47,10 @@
     <Compile Include="EventForBank.cs" />
     <Compile Include="EventForMe.cs" />
     <Compile Include="Events.cs" />
-    <Compile Include="MovingEventArgs.cs" />
+    <Compile Include="StudentEventArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
-    <Compile Include="WeakRef.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
