Modifyed same files

--- a/1. C#/1.18 BehavioralPatterns/1.18 BehavioralPatterns/1.18 BehavioralPatterns.csproj
+++ b/1. C#/1.18 BehavioralPatterns/1.18 BehavioralPatterns/1.18 BehavioralPatterns.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Strategy\IReadable.cs" />
     <Compile Include="Strategy\PC.cs" />
     <Compile Include="Strategy\SSD.cs" />
+    <Compile Include="Template\IRepair.cs" />
     <Compile Include="Template\PersonalReparation.cs" />
     <Compile Include="Template\Reparation.cs" />
     <Compile Include="Template\ServiceCenter.cs" />
