--- a/MyComplexApp/App.Services.Dtos/App.Services.Dtos.csproj
+++ b/MyComplexApp/App.Services.Dtos/App.Services.Dtos.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Intern\" />
+    <Folder Include="DTOs\Menthor\" />
+    <Folder Include="DTOs\RequestedUser\" />
+  </ItemGroup>
+
 </Project>
